# AdmiralBumbleBot

./: .gitignore  Cargo.toml  README.md  dumb_channels.ron
src/: commands.rs  consciousness.rs  handler.rs  logging.rs  macros.rs  main.rs  pastas.rs  storage.rs  variables.rs
src/commands/: announcement.rs  bee_sting.rs  buzz.rs  clean.rs  common.rs  get_message_data.rs  give_admin.rs  health.rs  help.rs  jenkem.rs  punish.rs  roll.rs  slap.rs
src/commands/bee_sting/: create_dumb_channel.rs  kick.rs  mute.rs
