[package]
name = "admiral_bumblebot"
version = "0.1.0"
authors = ["porksausages <porksausages@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.6"
regex = "1.3.7"
d20 = "0.1.0"
dotenv = "0.15.0"
ron = "0.5.1"
num-traits = "0.2"
num-derive = "0.3"
sled = "0.31.0"
serde = {version = "1.0.110", features = ["derive"]}
bincode = "1.2.1"